# python-globalsign

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  bandit.yml  pyproject.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: poetry.workflow.yml
python_globalsign/: client.py  exceptions.py
tests/: conftest.py  test_client.py  test_session.py
